1999-05-27  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (C_EXTRA_DIST): Remove c/directory.[hm],
	c/JavaProxy.[hm], have been moved to src/defobj.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javacswarm, javaswarm: Prefix $JAVA_CLASSES_INSTALLED_AS and
	"jar" with "x" to avoid shell error.

1999-05-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javacswarm: Use JAVAC.

1999-05-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-methods*): Update to use getRetVal:buf:
	instead of getRetVal:.

1999-05-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-argument-print-conversion): Use %d, not 
	%u (which doesn't exist).

1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-path, c-path): New function.
	(*java-path*, *c-path*): Remove.
	(module-path, java-print-classes): Use java-path.
	(with-protocol-c-file, java-print-makefiles): Use c-path.

	* Makefile.am (elcrule): Use $(shell cd $(dir $@); pwd) instead of
	$(dir $@), since Emacs for Windows loses with ./ derived from the
	latter (it can't be frozen due to files like common.el that are
	expected to be found in top_builddir).
	(Makefile.common $(SUBMAKEFILES)): Use $(abs_builddir) instead of
	$(dir $@).  Add SWARMSRCDIR in stub generation environment.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (C_EXTRA_DIST): Remove SwarmEnvironment.h.

	* java-stub.el (java-print-native-class): Don't include jni.h.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (JAVASWARMSCRIPTS): New substitution.
	(bin_SCRIPTS): Use it.
	(EXTRA_SCRIPTS: Add javacswarm and javaswarm.
	(EXTRA_DIST): Use it.
	
1999-04-25  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* javaswarm, javacswarm: Adjust classpath per
	JAVA_CLASSES_INSTALLED_AS.

1999-04-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*removed-methods*): Switch getRetVal:buf: to
	getRetVal:. 
