@@ -1,29 +1,0 @@
-#!/bin/sh
-. $SWARMHOME/etc/swarm/config.swarm
-
-LD_LIBRARY_PATH=`tr ':' '\012' << EOF | sort 2>/dev/null | uniq | tr '\012' ':'
-$swarm_libdir
-$xpmlibdir
-$tcllibdir
-$tklibdir
-$bltlibdir
-$ffilibdir
-$pnglibdir
-$zliblibdir
-$JAVALIBS
-EOF`$LD_LIBRARY_PATH
-if test x$JAVA_CLASSES_INSTALLED_AS = xjar; then
-  classpath=".:${swarm_datadir}/swarm/swarm.jar:${JAVACLASSES}:$CLASSPATH"
-else
-  classpath=".:${swarm_datadir}:${JAVACLASSES}:$CLASSPATH"
-fi
-
-if test -z "$1"  && test -z "$JAVASWARMGDB"; then
-  echo "LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH\""
-  echo "CLASSPATH=\"$classpath\""
-  echo "export LD_LIBRARY_PATH CLASSPATH"
-else
-  export LD_LIBRARY_PATH
-  eval "$JAVAENV CLASSPATH=$classpath $JAVASWARMGDB $JAVACMD $*"
-fi
-
