@@ -1,0 +1,44 @@
+#!/bin/sh
+
+@SHLIBPATH_VAR@=`tr ':' '\012' << EOF | sort 2>/dev/null | uniq | tr '\012' ':'
+@swarm_libdir@
+@xpmlibdir@
+@tcllibdir@
+@tklibdir@
+@bltlibdir@
+@ffilibdir@
+@pnglibdir@
+@zliblibdir@
+EOF`
+
+swarm_datadir=@swarm_datadir@
+
+JAVALIBS=@JAVALIBS@
+JAVACLASSES=@JAVACLASSES@
+JAVAENV=@JAVAENV@
+JAVACMD=@JAVACMD@
+
+export @SHLIBPATH@
+@JAVALIBPATH@=@swarm_libdir@:@JAVALIBS@
+
+if test x$JAVA_CLASSES_INSTALLED_AS = xjar; then
+  classpath=".:${swarm_datadir}/swarm/swarm.jar:${JAVACLASES}:$CLASSPATH"
+else
+  classpath=".:${swarm_datadir}:${JAVACLASSES}:$CLASSPATH"
+fi
+
+if test -z "$*"; then
+  echo "@JAVALIBPATH@=\"$@JAVALIBPATH@\""
+  echo "CLASSPATH=\"$classpath\""
+  echo "export @JAVALIBPATH@ CLASSPATH"   
+elif test -n "$JAVASWARMGDB"; then
+  export @JAVALIBPATH@ @SHLIBPATHVAR@
+  (echo "shell rm -f /tmp/.gdbinit.$$";
+   echo "cd `pwd`"; echo "set args $*" ) > /tmp/.swarmgdbinit.$$
+  eval "$JAVAENV CLASSPATH=$classpath $JAVASWARMGDB -command /tmp/.swarmgdbinit.$$ $JAVACMD"
+  rm -f /tmp/.swarmgdbinit.$$
+else
+  export @JAVALIBPATH@ @SHLIBPATH_VAR@
+  eval "$JAVAENV CLASSPATH=$classpath $JAVACMD $*"
+fi
+
